# metrix

./: Cargo.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: label.rs  lib.rs  time.rs  unit_vec.rs
common/src/async_runtime/: mod.rs
common/src/bytes_util/: fast_regex_matcher.rs  mod.rs
common/src/cache/: fast_cache.rs
common/src/error/: mod.rs  status_code.rs
common/src/fast_cache/: fast_cache.rs
common/src/hash/: fast_hash_fallback.rs  mod.rs  no_hash.rs  signature.rs
common/src/histogram/: histogram.rs  mod.rs
common/src/regex_util/: LICENSE  README.md  fast_matcher.rs  fast_matcher_tests.rs  hir_utils.rs  match_handlers.rs  mod.rs  prom_regex.rs  prom_regex_test.rs  regex_util_tests.rs  regex_utils.rs  regexp_cache.rs  simplify.rs  string_pattern.rs  test.rs
common/src/threads/: macros.rs  mod.rs
common/src/types/: mod.rs  unit_vec.rs
encoding/: Cargo.toml
encoding/src/: lib.rs  marshal.rs
encoding/src/encoders/: pco.rs  simple8b.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/ast/: check_ast.rs  expr.rs  expr_tree_node.rs  interpolated_selector.rs  mod.rs  operator.rs  string_expr.rs  utils.rs  visitor.rs
parser/src/binaryop/: mod.rs
parser/src/common/: mod.rs  tree_node.rs  utils.rs
parser/src/functions/: aggregate.rs  mod.rs  rollup.rs  signature.rs  transform.rs
parser/src/label/: label_filter.rs  label_filter_expr.rs  labels.rs  matcher.rs  mod.rs
parser/src/optimizer/: const_evaluator.rs  parens_remover.rs  push_down_filters.rs  push_down_filters_test.rs  simplifier.rs
parser/src/parser/: aggregation.rs  duration.rs  expand.rs  expr.rs  function.rs  metric_name.rs  mod.rs  number.rs  parse_error.rs  parser.rs  parser_test.rs  rollup.rs  selector.rs  timestamp.rs  tokens.rs  utils.rs
relabel/: Cargo.toml
relabel/src/: if_expression_test.rs  label_filter.rs  relabel.rs  relabel_config.rs  relabel_test.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  runtime_error.rs
runtime/src/cache/: default_result_cache_storage.rs  rollup_result_cache.rs  rollup_result_cache_tests.rs  serialization.rs  utils.rs
runtime/src/common/: math.rs  mod.rs
runtime/src/execution/: active_queries.rs  aggregate.rs  context.rs  eval.rs  eval_config.rs  eval_test.rs  exec.rs  exec_test.rs  mod.rs  new_eval.rs  parser_cache.rs  query.rs  rollups.rs  test_notes.md  utils.rs  vectors.rs
runtime/src/execution/binary/: binop_duration.rs  binop_scalar_vector.rs  binop_string_string.rs  binop_vector_vector.rs  common.rs  mod.rs
runtime/src/execution/dag/: binop_node.rs  builder.rs  evaluator.rs  node.rs  rollup_node.rs  scalar_vector_binop_node.rs  subquery_node.rs  test_exec.rs  utils.rs  vector_scalar_binop_node.rs  vector_vector_binary_node.rs
runtime/src/filter/: tag_filter.rs
runtime/src/functions/: arg_parse.rs  utils.rs
runtime/src/functions/aggregate/: aggr_fns.rs  mod.rs
runtime/src/functions/aggregate/incremental/: avg.rs  count.rs  geomean.rs  max.rs  min.rs  sum.rs  sum2.rs
runtime/src/functions/rollup/: candlestick.rs  counts.rs  duration_over_time.rs  hoeffding_bound.rs  mod.rs  quantiles.rs  rollup_config.rs  rollup_fns.rs  rollup_test.rs  timeseries_map.rs  types.rs
runtime/src/functions/transform/: datetime.rs  histogram.rs  labels.rs  limit_offset.rs  math.rs  mod.rs  rand.rs  range.rs  running.rs  scalar.rs  sort.rs  step.rs  union.rs
runtime/src/histogram/: mod.rs
runtime/src/provider/: deadline.rs  index_key.rs  memory_postings.rs  memory_provider.rs  mod.rs  provider_error.rs  utils.rs
runtime/src/query_stats/: mod.rs
runtime/src/tests/: utils.rs
runtime/src/tests/promql_test/: lazy_loader.rs  parser.rs  test.rs  test_command.rs  types.rs
runtime/src/types/: metric_name.rs  mod.rs  query_value.rs  timeseries.rs  unit_vec.rs
