[workspace.package]
version = "0.1.0"
authors = ["ccollie <collie.clayton@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A promql execution engine"
homepage = "https://github.com/ccolle/metricsql"
repository = "https://github.com/ccolle/metricsql"
keywords = ["promql", "prometheus", "observability", "metrics"]
readme = "README.md"

[workspace]
members = [
    "common",
    "encoding",
    "parser",
    "runtime"
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
agnostic-lite = { version = "0.4.0", default-features = false, features = ["time"] }
ahash = { version = "0.8", features = ["std", "serde"] }
byte-pool = "0.2"
chili = "0.2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cfg-if = "1.0.0"
enquote = "1.1"
# peg this to 0.3.30 until all crate dependents are update, since 0.3.31 introduces a breaking change
futures = "0.3.31"
get-size = { version = "^0.1", features = ["derive"] }
integer-encoding = "4.0"
num-traits = "0.2"
pco = "0.4"
pretty_assertions = "1.4"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10"
regex = "1"
regex-syntax = "0.8"
rs_unit = "0.0.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_regex="1.1"
scopeguard = "1.2.0"
smallvec = { version = "2.0.0-alpha.10", features = ["specialization", "std"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = { version = "0.26" }
tracing = "0.1"
phf = { version = "0.11", features = ["macros"] }
thiserror = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[workspace.dev-dependencies]
test-case = "3"
serde_json = "1.0"

[profile.release]
lto = "fat"