[package]
name = "metricsql_runtime"
description = "A promql execution engine"
resolver = "2"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
itertools = "0.13.0"
rs_unit = { workspace = true }
glob = "0.3.2"

[dependencies]
agnostic-lite.workspace = true
ahash.workspace = true
async-std = { version = "1.13", optional = true }
async-trait = "0.1"
enquote.workspace = true
clone_dyn = "0.29"
chili.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
effective-limits = "0.5"
integer-encoding.workspace = true
lockfree-object-pool = "0.1"
lru_time_cache = "0.11"
num-traits.workspace = true
phf.workspace = true
prometheus-parse = "0.2"
pco.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
topologic = "1.1"
smol = {  version = "2.0", optional = true }
tokio = { version = "1", optional = true, features = ["macros"] }
scopeguard.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
metricsql_common={ path = "../common" }
metricsql_parser={ path = "../parser" }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "agnostic-lite/tokio"]
async-std = ["dep:async-std", "agnostic-lite/async-std"]
smol = ["dep:smol", "agnostic-lite/smol"]
